force-app/main/default/objects/Pipeline_Station__c/Pipeline_Station__c.object-meta.xml
<CustomObject>
    <label>Pipeline Station</label>
    <nameField>
        <label>Station Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pipeline Stations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>