force-app/main/default/objects/Pipeline_Station__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <label>Pipeline</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Pipeline Stations</relationshipLabel>
    <relationshipName>Pipeline_Stations</relationshipName>
    <type>Lookup</type>
</CustomField>