force-app/main/default/objects/Pipeline_Station__c/fields/Station_Location__c.field-meta.xml
<CustomField>
    <fullName>Station_Location__c</fullName>
    <label>Station Location</label>
    <type>Text</type>
    <length>255</length>
</CustomField>