force-app/main/default/objects/Pipeline_Station__c/fields/Station_Type__c.field-meta.xml
<CustomField>
    <fullName>Station_Type__c</fullName>
    <label>Station Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pump</fullName>
            </value>
            <value>
                <fullName>Compressor</fullName>
            </value>
            <value>
                <fullName>Valve</fullName>
            </value>
            <value>
                <fullName>Meter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>